use haikunator + sessions to assign unique name and publish to IO

--- a/views/index.erb
+++ b/views/index.erb
@@ -85,6 +85,7 @@
 
   <body>
     <h1>IO SAMPLE</h1>
+    <h3><%= @name %></h3>
 
     <p>
       <label>Send '1' to button-click feed:
@@ -100,6 +101,14 @@
         <input id='color-set' type='color' value=''/>
       </label>
       <button id='color-set-button'>Click to Update Color</button>
+    </p>
+
+    <p>
+      <a target='_blank' href='http://io.adafruit.vm/test_username/dashboards/adafruit-io-client-demo'>visit dashboard</a>
+      <br/>
+      <a target='_blank' href='https://github.com/abachman/adafruit-io-shared-client'>view source</a>
+      <br />
+      <a target='_blank' href='https://desolate-peak-89727.herokuapp.com/'>permalink</a>
     </p>
 
     <p class='status' style='font-family:monospace'></p>
